Bump Spring Boot version to 2.6.3.